@@ -3,6 +3,7 @@
 Changelog: December 27, 2014
 = Code =
 * Additional minor code refactoring to better meet WordPress Coding Standards
+* Added `nona_content_width` function to be used in "*_head" hooks
 
 = CSS =
 = Miscellaneous =
